graph/arangodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arangodb-service
spec:
  selector:
    app: arangodb
  ports:
    - protocol: TCP
      port: 8529
      targetPort: 8529
